<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:drawableLeft="@mipmap/user"
        android:drawablePadding="20dp"
        android:text="@string/text_title"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical"
            android:padding="20dp">

            <EditText
                android:id="@+id/phone_num_input_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_edit_text_bg"
                android:drawableLeft="@mipmap/phone"
                android:drawablePadding="10dp"
                android:focusable="true"
                android:hint="@string/text_number_input"
                android:inputType="number"
                android:maxLength="11"
                android:paddingLeft="30dp"
                android:paddingTop="10dp"
                android:paddingRight="20dp"
                android:paddingBottom="10dp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="#7e7e7e"
                android:textCursorDrawable="@drawable/shape_edt_cursor"
                android:textSize="24sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <EditText
                    android:id="@+id/verify_code_input_box"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_edit_text_bg"
                    android:drawableLeft="@mipmap/password"
                    android:drawablePadding="10dp"
                    android:hint="@string/text_get_verify_code"
                    android:inputType="number"
                    android:paddingLeft="30dp"
                    android:paddingTop="10dp"
                    android:paddingRight="180dp"
                    android:paddingBottom="10dp"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="#7e7e7e"
                    android:textCursorDrawable="@drawable/shape_edt_cursor"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/get_verify_code_btn"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="30dp"
                    android:gravity="center"
                    android:text="@string/text_user_report"
                    android:textColor="@drawable/selector_text_color"
                    android:textSize="20sp" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="40dp"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="8dp"
                    android:layout_toLeftOf="@id/get_verify_code_btn"
                    android:background="@drawable/shape_line_bg" />


            </RelativeLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/report_check_box"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@null"
                    android:drawableLeft="@drawable/selector_check_box"
                    android:drawablePadding="10dp" />

                <TextView
                    android:id="@+id/agreement_tips"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@null"
                    android:text="@string/text_agreement"
                    android:textColor="@color/mainDeepColor"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/selector_btn_bg"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/text_confirm"
                android:textColor="@color/white"
                android:textSize="28sp" />
        </LinearLayout>

<!--        <com.example.customview.customview.loginpage.LoginKeyboardView-->
<!--            android:id="@+id/number_key_pad"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="match_parent"-->
<!--            android:layout_weight="2"-->
<!--            android:padding="20dp" />-->

        <com.example.customview.customview.keypad.KeypadView
            android:id="@+id/number_key_pad"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:padding="20dp" />

    </LinearLayout>

</LinearLayout>